Modified Main Page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,48 @@ appTitle=Order Management
 appDescription=Order Management
 #XTIT: Main view title
 title=Order Management
+
+#XTIT: Order Table title
+order.tableTitle=Orders
+
+#XFLD: Order Number Label
+order.number=Order Number
+
+#XFLD: Creation Date Label
+order.creationDate=Creation Date
+
+#XFLD: Status Label
+order.status=Status
+
+#XCOL: Order Number Column
+column.orderNumber=Order Number
+
+#XCOL: Creation Date Column
+column.creationDate=Creation Date
+
+#XCOL: Receiving Plant Column
+column.receivingPlant=Receiving Plant
+
+#XCOL: Delivering Plant Column
+column.deliveringPlant=Delivering Plant
+
+#XCOL: Status Column
+column.status=Status
+
+#XBUT: Create button text
+button.create=Create
+
+#XBUT: Delete button text
+button.delete=Delete
+
+#YMSE: No selection
+error.noSelection=Please select an item from the table.
+
+#YMSE: Failed to delete item
+error.failedDelete=Failed to delete item.
+
+#YMSI: Delete items
+confirm.deleteItems=Are you sure you want to delete {0} items?
+
+#YMSI: Item deleted
+info.successDelete=Item deleted.
