Add Details Page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,8 +10,23 @@ appDescription=Order Management
 #XTIT: Main view title
 title=Order Management
 
+#XTIT: Create Order page title
+page.createTitle=Create Order
+
+#XTIT: Details page title
+page.detailsTitle=Detail
+
+#XTIT: Edit page title
+page.editTitle=Edit Order
+
 #XTIT: Order Table title
 order.tableTitle=Orders
+
+#XTIT: Product Table title
+product.tableTitle=Products
+
+#XTIT: Order form title
+order.formTitle=Order Detail
 
 #XFLD: Order Number Label
 order.number=Order Number
@@ -21,6 +36,15 @@ order.creationDate=Creation Date
 
 #XFLD: Status Label
 order.status=Status
+
+#XFLD: Created On Label
+order.createdOn=Created On
+
+#XFLD: Receiving Plant Label
+order.receivingPlant=Receiving Plant
+
+#XFLD: Delivering Plant Label
+order.deliveringPlant=Delivering Plant
 
 #XCOL: Order Number Column
 column.orderNumber=Order Number
@@ -37,11 +61,32 @@ column.deliveringPlant=Delivering Plant
 #XCOL: Status Column
 column.status=Status
 
+#XCOL: Product Name Column
+column.productName=Product Name
+
+#XCOL: Quantity
+column.quantity=Quantity
+
+#XCOL: Price Per Quantity Column
+column.pricePerQuantity=Price Per Quantity
+
+#XCOL: Total Price Column
+column.totalPrice=Total Price
+
 #XBUT: Create button text
 button.create=Create
 
 #XBUT: Delete button text
 button.delete=Delete
+
+#XBUT: Edit button text
+button.edit=Edit
+
+#XBUT: Save button text
+button.save=Save
+
+#XBUT: Cancel button text
+button.cancel=Cancel
 
 #YMSE: No selection
 error.noSelection=Please select an item from the table.
@@ -51,6 +96,9 @@ error.failedDelete=Failed to delete item.
 
 #YMSI: Delete items
 confirm.deleteItems=Are you sure you want to delete {0} items?
+
+#YMSI: Cancel Edit
+confirm.cancelEdit=Are you sure you want to cancel the changes done in the page?
 
 #YMSI: Item deleted
 info.successDelete=Item deleted.
