--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -25,6 +25,9 @@ order.tableTitle=Orders
 #XTIT: Product Table title
 product.tableTitle=Products
 
+#XTIT: Product Search Table title
+product.searchTableTitle=Select Product
+
 #XTIT: Order form title
 order.formTitle=Order Detail
 
@@ -88,17 +91,35 @@ button.save=Save
 #XBUT: Cancel button text
 button.cancel=Cancel
 
+#XBUT: Add button text
+button.add=Add
+
+#XBUT: Close button text
+button.close=Close
+
 #YMSE: No selection
 error.noSelection=Please select an item from the table.
 
 #YMSE: Failed to delete item
 error.failedDelete=Failed to delete item.
 
-#YMSI: Delete items
+#YINF: Delete items
 confirm.deleteItems=Are you sure you want to delete {0} items?
 
-#YMSI: Cancel Edit
+#YINF: Save Changes
+confirm.saveChanges=Are you sure you want to save these changes?
+
+#YINF: Cancel Edit
 confirm.cancelEdit=Are you sure you want to cancel the changes done in the page?
 
-#YMSI: Item deleted
+#YINF: Item deleted
 info.successDelete=Item deleted.
+
+#YINF: Order updated
+info.orderUpdated=The Order {0} has been successfully updated.
+
+#YINF: No Products Found
+info.noProductsFound=No Products Found
+
+#YINF: No item selected
+info.noItemSelected=No item selected
