Modified Edit Page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -103,6 +103,9 @@ error.noSelection=Please select an item from the table.
 #YMSE: Failed to delete item
 error.failedDelete=Failed to delete item.
 
+#YMSE: Error order update
+error.orderUpdated=Failed to update Order {0}.
+
 #YINF: Delete items
 confirm.deleteItems=Are you sure you want to delete {0} items?
 
@@ -114,6 +117,9 @@ confirm.cancelEdit=Are you sure you want to cancel the changes done in the page?
 
 #YINF: Item deleted
 info.successDelete=Item deleted.
+
+#YINF: Product Added
+info.productAdded=Product {0} added.
 
 #YINF: Order updated
 info.orderUpdated=The Order {0} has been successfully updated.
